--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 __pycache__/AppController.cpython-310.pyc
 __pycache__/Usuario.cpython-310.pyc
 __pycache__/BaseDeDatosJSON.cpython-310.pyc
+__pycache__/News.cpython-310.pyc
